# cast-database-analyzer

./: .gitignore  CAST-Analyzer.vbs  CAST-Database-Analyzer.hta  CAST-Database-Analyzer.ps1  DISTRIBUTION-GUIDE.md  ESSENTIAL-FILES.md  GITHUB-BUILD-INSTRUCTIONS.md  GITHUB-DEPLOYMENT-GUIDE.md  README-GITHUB.md  README.md  build-linux.sh  build-tauri.js  build-windows.ps1  create-icon.js  create_executable.py  dev-server.js  electron-dragdrop-fix.js  electron-main.js  index.html  main.js  package-lock.json  package.json  preload.js  simple-frontend.html  sqlite_to_json_converter.py  start-desktop.sh  styles.css
.github/workflows/: build-and-release.yml  build-and-release.yml.disabled  build-minimal.yml  build-tauri-simple.yml  build-tauri.yml  build-tauri.yml.disabled  electron-build.yml  electron-build.yml.disabled  release.yml.disabled  tauri-build.yml
src-tauri/: Cargo-simple.toml  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  error.rs  extractors.rs  file_processor.rs  main.rs  models.rs
